# MyCppSourceCode

./: README.md
BlurnessDetection/: bdlapv.cpp  bdlapv.h
FaceRecgService-gRPC/: CMakeLists.txt
FaceRecgService-gRPC/inc/: interface_face_recognizer.h
FaceRecgService-gRPC/protos/: FaceRecg.proto
FaceRecgService-gRPC/src/: greeter_client.cc  greeter_server.cc
MyAes/: CMakelIsts.txt  bilibili_aes.cc
Svm-Frontal-Profile-face/: marks_svm.cpp  marks_svm.h
TinyAesPractice/: CMakelIsts.txt  my_aes.cc
